begynt på newsCard
det som skal vise nyheten ser passe bra ut, bør jobbe begynne å jobbe på layout til hoved sida (kanskje telefon først)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,6 @@
 import { fade } from "astro:transitions";
 import { ViewTransitions } from "astro:transitions";
 import BaseHead from "../components/BaseHead.astro";
-
 const { ...head } = Astro.props;
 ---
 
@@ -12,12 +11,12 @@ const { ...head } = Astro.props;
     <BaseHead {...head} />
     <ViewTransitions />
   </head>
-  <body class="mx-2">
+  <body class="px-5 md:mx-2">
     <main transition:animate={fade({ duration: "0.4s" })}>
       <div class="flex mt-5">
-        <img src="../../public/faveicon-temp.png" width="10%" class="mr-2" />
+        <img src="../../public/faveicon-temp.png" class="mr-2 w-14" />
         <a href="/" class="my-auto">
-          <h1 class="my-auto text-3xl">Folketsrop</h1>
+          <h1 class="font-bold text-4xl">Folketsrop</h1>
         </a>
       </div>
       <slot />
