--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,30 +1,20 @@
 ---
 import siteConfig from "../site-config";
 
-const navBarLogo = siteConfig.header.logo || [];
-const navLinks = siteConfig.header.navLinks || [];
+const navLinks = siteConfig.navLinks || [];
 ---
 
-<header
-  id="header"
-  class="w-screen h-20 px-6 flex justify-between items-center relative"
->
-  <div class="flex items-center h-full">
-    <a href="/" class="mr-6" aria-label="Header Logo Image">
-      <img
-        id="logo"
-        width="32"
-        height="32"
-        src={navBarLogo.src}
-        alt={navBarLogo.alt}
-      />
-    </a>
-    <nav class="flex flex-wrap gap-x-6 position-initial flex-row">
-      <a href="/Cv">Cv</a>
-      <a href="/Projects">Projects</a>
-    </nav>
-  </div>
-  <div class="flex gap-x-6">
-    <a href="https://github.com/albertbayazidi" class="i-ri-github-line"></a>
-  </div>
+<header id="header" class="flex">
+  <nav class="flex flex-wrap gap-x-6 pt-8 w-96 w border-b-2 border-gray-200 mb-10">
+    {
+      navLinks.map((link) => (
+        <a
+          class="text-xl pb-1 border-b-2 border-opacity-0 border-black hover:border-opacity-100 transition-colors duration-150 ease-linear"
+          href={link.href}
+        >
+          {link.text}
+        </a>
+      ))
+    }
+  </nav>
 </header>
