--- a/src/components/NewsCard.astro
+++ b/src/components/NewsCard.astro
@@ -1,20 +1,26 @@
 ---
 interface Props {
-  data: { title:string, description?:string, image:string },
+  title: string;
+  description?: string;
+  image: string;
 }
 
-const {title,description,image} = Astro.props;
+const { title, description, image } = Astro.props;
 ---
 
-<div class="relative w-96 max-h-56">
-  <img src={image} alt={`img of ${title}`} class="w-full h-auto" />
+<div class="relative w-96 max-h-56 overflow-hidden group">
+  <img
+    src={image}
+    alt={`img of ${title}`}
+    class="w-full h-auto object-cover transform transition-transform duration-500 ease-in-out group-hover:scale-110"
+  />
   <div class="z-30 absolute bottom-0 w-full h-20">
-    <div class="-z-10 absolute bottom-0 bg-opacity-50 bg-gray-800 backdrop-blur-sm w-full min-h-full">
+    <div
+      class="-z-10 absolute bottom-0 bg-opacity-50 bg-gray-800 backdrop-blur-sm w-full min-h-full"
+    >
       <div class="text-white text-lg font-medium p-2">
         <span class="block">{title}</span>
-        <span>
-          {description}
-        </span>
+        {description && <span>{description}</span>}
       </div>
     </div>
   </div>
