--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,9 @@
 import { fade } from "astro:transitions";
 import { ViewTransitions } from "astro:transitions";
 import BaseHead from "../components/BaseHead.astro";
-const { ...head } = Astro.props;
+import Navbar from "../components/Navbar.astro";
+
+const { currentTab, ...head } = Astro.props;
 ---
 
 <!doctype html>
@@ -12,13 +14,14 @@ const { ...head } = Astro.props;
     <ViewTransitions />
   </head>
   <body class="px-5 md:mx-2">
-    <main transition:animate={fade({ duration: "0.4s" })}>
-      <div class="flex mt-5">
-        <img src="../../public/faveicon-temp.png" class="mr-2 w-14" />
-        <a href="/" class="my-auto">
-          <h1 class="font-bold text-4xl">Folketsrop</h1>
-        </a>
-      </div>
+    <div class="flex mt-5">
+      <img src="../../faveicon-temp.png" class="mr-2 w-14" />
+      <a href="/" class="my-auto">
+        <h1 class="font-bold text-4xl">Folketsrop</h1>
+      </a>
+    </div>
+    <Navbar currentTab={currentTab} />
+    <main transition:animate={fade({ duration: "0.25s" })}>
       <slot />
     </main>
   </body>
