--- a/src/pages/Klasse/index.astro
+++ b/src/pages/Klasse/index.astro
@@ -3,4 +3,4 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import Navbar from "../../components/Navbar.astro";
 ---
 
-<BaseLayout> nr2 </BaseLayout>
+<BaseLayout currentTab="Klasse"> nr2 </BaseLayout>
