--- a/src/pages/Utenriks/index.astro
+++ b/src/pages/Utenriks/index.astro
@@ -3,4 +3,4 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import Navbar from "../../components/Navbar.astro";
 ---
 
-<BaseLayout> nr3 </BaseLayout>
+<BaseLayout currentTab="Utenriks"> nr3 </BaseLayout>
