--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import siteConfig from "../site-config";
-import NewsCard from "../components/NewsCard.astro";
 ---
 
-<BaseLayout currentTab="Alt"> nr1 </BaseLayout>
+<BaseLayout currentTab="Alt">
+  <!-- Your page content here -->
+  <p>This is the Alt page</p>
+</BaseLayout>
