--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,28 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import NewsCard from "../components/NewsCard.astro";
+
+const classePosts = await getCollection("Klasse");
+const foreignAffairsPosts = await getCollection("Utenriks");
+
+const allPosts = [...classePosts, ...foreignAffairsPosts];
+
+allPosts.sort(
+  (a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime(),
+);
 ---
 
 <BaseLayout currentTab="Alt">
-  <!-- Your page content here -->
-  <p>This is the Alt page</p>
+  {
+    allPosts.map((post) => (
+    <a class="inline-block">
+        <NewsCard
+          title={post.data.title}
+          description={post.data.description}
+          image={post.data.image}
+        />
+      </a>
+    ))
+  }
 </BaseLayout>
