--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,14 +19,16 @@ const { currentTab, ...head } = Astro.props;
   </head>
   <body class="px-5 md:mx-2">
     <div class="flex mt-5">
-      <img src="../../faveicon-temp.png" class="mr-2 w-14" />
+      <img src="../../faveicon.png" class="mr-2 w-20" />
       <a href="/" class="my-auto">
         <h1 class="font-bold text-4xl">Folketsrop</h1>
       </a>
     </div>
     <Navbar currentTab={currentTab} />
     <main transition:animate={fade({ duration: "0.25s" })}>
+      <div class="sm:w-threeNews">
       <slot />
+      </div>
     </main>
   </body>
 </html>
