--- a/src/pages/Utenriks/index.astro
+++ b/src/pages/Utenriks/index.astro
@@ -15,7 +15,7 @@ foreignAffairsPosts.sort(
   {
     foreignAffairsPosts.map((post) => (
     <a class="inline-block m-1"
-        href={`/Klasse/${post.slug}/`}
+        href={`/Utenriks/${post.slug}/`}
   >
         <NewsCard
           title={post.data.title}
