--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -19,9 +19,9 @@ const { currentTab, ...head } = Astro.props;
   </head>
   <body class="sm:px-96 ">
     <div class="flex mt-5">
-      <img src="../../faveicon.png" class="mr-2 w-20" />
-      <a href="/" class="my-auto">
-        <h1 class="font-bold text-4xl">Folketsrop</h1>
+      <a href="/" class="inline-flex" >
+        <img src="../../faveicon.png" class="mr-2 w-20" />
+        <h1 class="font-bold text-4xl my-auto">Folketsrop</h1>
       </a>
     </div>
     <main transition:animate={fade({ duration: "0.25s" })}>
