--- a/src/pages/Klasse/[...slug].astro
+++ b/src/pages/Klasse/[...slug].astro
@@ -20,15 +20,28 @@ const post = klasseposts.find((post) => post.slug === slug);
 <ArticleLayout>
   {
     post ? (
-      <article class="max-w-4xl mx-auto p-6 bg-white shadow-md rounded-lg mt-10">
-        <header class="mb-4">
-          <h1 class="text-4xl font-bold text-gray-800">{post.data.title}</h1>
-          <p class="text-sm text-gray-500 mt-2">{post.data.date}</p>
-        </header>
-        <div class="prose prose-lg text-gray-700 leading-relaxed">
-          {post.body}
-        </div>
-      </article>
+      <div class="my-10 flex flex-col items-center">
+        {post.data.image && (
+          <img
+            src={post.data.image}
+            alt={post.data.title}
+            class="w-1/2 h-auto rounded-lg mb-6 object-cover"
+          />
+        )}
+        <article class="max-w-4xl w-full p-6 bg-white shadow-md rounded-lg mt-10">
+          <header class="mb-4">
+            <h1 class="text-4xl font-bold text-gray-800 text-center">
+              {post.data.title}
+            </h1>
+            <p class="text-sm text-gray-500 mt-2 text-center">
+              {post.data.date}
+            </p>
+          </header>
+          <div class="prose prose-lg text-gray-700 leading-relaxed">
+            {post.body}
+          </div>
+        </article>
+      </div>
     ) : (
       <div class="max-w-4xl mx-auto p-6 bg-white shadow-md rounded-lg mt-10">
         <p class="text-xl text-gray-800">
