--- a/src/components/NewsCard.astro
+++ b/src/components/NewsCard.astro
@@ -2,18 +2,22 @@
 interface Props {
   title: string;
   description?: string;
-  image: string;
+  image?: string;
 }
 
 const { title, description, image } = Astro.props;
 ---
 
 <div class="relative w-full max-w-96 max-h-56 overflow-hidden group">
-  <img
-    src={image}
-    alt={`img of ${title}`}
-    class="w-full h-auto object-cover transform transition-transform duration-500 ease-in-out group-hover:scale-110"
-  />
+  {
+    image && (
+      <img
+        src={image}
+        alt={`img of ${title}`}
+        class="w-full h-auto object-cover transform transition-transform duration-500 ease-in-out group-hover:scale-110"
+      />
+    )
+  }
   <div class="z-30 absolute bottom-0 w-full h-20">
     <div
       class="-z-10 absolute bottom-0 bg-opacity-50 bg-gray-800 backdrop-blur-sm w-full min-h-full"
