--- a/src/components/MainNewsCard.astro
+++ b/src/components/MainNewsCard.astro
@@ -2,14 +2,15 @@
 interface Props {
   title: string;
   description?: string;
-  image: string;
+  image?: string;
+  url: string;
 }
 
-const { title, description, image } = Astro.props;
+const { title, description, image, url } = Astro.props;
 ---
 
-<img
-  src={image}
-  alt={`img of ${title}`}
-  class="w-full h-auto object-cover transform transition-transform duration-500 ease-in-out group-hover:scale-110"
-/>
+<a class="col-span-2" href={url}>
+  <div>
+    <img src={image} />
+  </div>
+</a>
