--- a/src/pages/Klasse/index.astro
+++ b/src/pages/Klasse/index.astro
@@ -5,18 +5,17 @@ import NewsCard from "../../components/NewsCard.astro";
 
 const classePosts = await getCollection("Klasse");
 
-
 classePosts.sort(
   (a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime(),
 );
+
+const [mainNews, ...remainingposts] = classePosts;
 ---
 
 <BaseLayout currentTab="Klasse">
   {
-    classePosts.map((post) => (
-    <a class="inline-block m-1"
-        href={`/Klasse/${post.slug}/`}
-  >
+    remainingposts.map((post) => (
+      <a class="inline-block m-1" href={`/Klasse/${post.slug}/`}>
         <NewsCard
           title={post.data.title}
           description={post.data.description}
