--- a/src/pages/Utenriks/index.astro
+++ b/src/pages/Utenriks/index.astro
@@ -5,18 +5,16 @@ import NewsCard from "../../components/NewsCard.astro";
 
 const foreignAffairsPosts = await getCollection("Utenriks");
 
-
 foreignAffairsPosts.sort(
   (a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime(),
 );
+const [mainNews, ...remainingposts] = foreignAffairsPosts;
 ---
 
 <BaseLayout currentTab="Utenriks">
   {
-    foreignAffairsPosts.map((post) => (
-    <a class="inline-block m-1"
-        href={`/Utenriks/${post.slug}/`}
-  >
+    remainingposts.map((post) => (
+      <a class="inline-block m-1" href={`/Utenriks/${post.slug}/`}>
         <NewsCard
           title={post.data.title}
           description={post.data.description}
