--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,11 +18,59 @@ const { currentTab, ...head } = Astro.props;
     <ViewTransitions />
   </head>
   <body class="px-5 md:mx-2">
-    <div class="flex mt-5">
-      <a href="/" class="inline-flex">
+    <div class="flex mt-5 items-center">
+      <a href="/" class="inline-flex items-center">
         <img src="../../faveicon.png" class="mr-2 w-20" />
-        <h1 class="font-bold text-4xl my-auto">Folketsrop</h1>
+        <h1 class="font-bold text-4xl">Folketsrop</h1>
       </a>
+      <svg
+        class="w-10 h-10 ml-auto"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        ><g
+          fill="none"
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-width="2"
+          ><circle cx="12" cy="32" r="5"
+            ><animate fill="freeze" attributeName="cy" dur="0.6s" values="32;12"
+            ></animate></circle
+          ><g stroke-dasharray="2" stroke-dashoffset="2"
+            ><path d="M0 0"
+              ><animate
+                fill="freeze"
+                attributeName="d"
+                begin="0.7s"
+                dur="0.2s"
+                values="M12 19v1M19 12h1M12 5v-1M5 12h-1;M12 21v1M21 12h1M12 3v-1M3 12h-1"
+              ></animate><animate
+                fill="freeze"
+                attributeName="stroke-dashoffset"
+                begin="0.7s"
+                dur="0.2s"
+                values="2;0"></animate></path
+            ><path d="M0 0"
+              ><animate
+                fill="freeze"
+                attributeName="d"
+                begin="0.9s"
+                dur="0.2s"
+                values="M17 17l0.5 0.5M17 7l0.5 -0.5M7 7l-0.5 -0.5M7 17l-0.5 0.5;M18.5 18.5l0.5 0.5M18.5 5.5l0.5 -0.5M5.5 5.5l-0.5 -0.5M5.5 18.5l-0.5 0.5"
+              ></animate><animate
+                fill="freeze"
+                attributeName="stroke-dashoffset"
+                begin="0.9s"
+                dur="0.2s"
+                values="2;0"></animate></path
+            ><animateTransform
+              attributeName="transform"
+              dur="30s"
+              repeatCount="indefinite"
+              type="rotate"
+              values="0 12 12;360 12 12"></animateTransform></g
+          ></g
+        ></svg
+      >
     </div>
     <Navbar currentTab={currentTab} />
     <main transition:animate={fade({ duration: "0.25s" })}>
