--- a/src/pages/Utenriks/[...slug].astro
+++ b/src/pages/Utenriks/[...slug].astro
@@ -24,7 +24,7 @@ const post = foreignAffairsPosts.find((post) => post.slug === slug);
           <img
             src={post.data.image}
             alt={post.data.title}
-            class="w-1/2 h-auto rounded-lg mb-6 object-cover"
+            class="max-w-[90vw] h-auto rounded-lg mb-6 object-cover"
           />
         )}
         <article class="max-w-4xl mx-auto p-6 bg-white shadow-md rounded-lg mt-10">
