--- a/src/pages/Klasse/[...slug].astro
+++ b/src/pages/Klasse/[...slug].astro
@@ -25,7 +25,7 @@ const post = klasseposts.find((post) => post.slug === slug);
           <img
             src={post.data.image}
             alt={post.data.title}
-            class="w-1/2 h-auto rounded-lg mb-6 object-cover"
+            class="max-w-[80vw]  rounded-lg mb-6 object-cover"
           />
         )}
         <article class="max-w-4xl w-full p-6 bg-white shadow-md rounded-lg mt-10">
