--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@ const navLinks = siteConfig.navLinks || [];
 
 <header id="header" class="flex">
   <nav
-    class="flex flex-wrap gap-x-6 pt-8 w-96 w border-b-2 border-gray-200 mb-10"
+    class="flex flex-wrap gap-x-6 pt-8 w-[25vw] border-b-2 border-gray-200 mb-10"
   >
     {
       navLinks.map((link) => (
