--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,8 +20,8 @@ const { currentTab, ...head } = Astro.props;
   <body class="px-5 md:mx-2">
     <div class="flex mt-5 items-center">
       <a href="/" class="inline-flex items-center">
-        <img src="../../faveicon.png" class="mr-2 w-20" />
-        <h1 class="font-bold text-4xl">Folketsrop</h1>
+        <img src="../../faveicon.png" class="mr-2 w-20 rounded-full" />
+        <h1 class="font-bold text-4xl">Folkets rop</h1>
       </a>
       <svg
         class="w-10 h-10 ml-auto"
