some refactoring and began on dark mode

--- a/src/components/MainNewsCard.astro
+++ b/src/components/MainNewsCard.astro
@@ -14,7 +14,7 @@ const { title, description, image, url } = Astro.props;
     <a href={url} class="block mx-auto">
       <div class="overflow-hidden rounded-lg">
         <img
-          class="block rounded-lg transform transition-transform duration-300 group-hover:scale-110"
+          class="block max-h-[65vh] rounded-lg transform transition-transform duration-300 group-hover:scale-110"
           src={image}
         />
       </div>
