--- a/src/pages/Utenriks/index.astro
+++ b/src/pages/Utenriks/index.astro
@@ -1,7 +1,8 @@
 ---
 import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
-import NewsCard from "../../components/NewsCard.astro";
+import MainNewsCard from "../../components/MainNewsCard.astro";
+import NewsList from "../../components/NewsList.astro";
 
 const foreignAffairsPosts = await getCollection("Utenriks");
 
@@ -13,14 +14,14 @@ const [mainNews, ...remainingposts] = foreignAffairsPosts;
 
 <BaseLayout currentTab="Utenriks">
   {
-    remainingposts.map((post) => (
-      <a class="inline-block m-1" href={`/Utenriks/${post.slug}/`}>
-        <NewsCard
-          title={post.data.title}
-          description={post.data.description}
-          image={post.data.image}
-        />
-      </a>
-    ))
+    (
+      <MainNewsCard
+        title={mainNews.data.title}
+        description={mainNews.data.description}
+        image={mainNews.data.image}
+        url={`/${mainNews.collection}/${mainNews.slug}/`}
+      />
+    )
   }
+  {(<NewsList remainingposts={remainingposts} />)}
 </BaseLayout>
