--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,7 +27,7 @@ const { currentTab, ...head } = Astro.props;
     <Navbar currentTab={currentTab} />
     <main transition:animate={fade({ duration: "0.25s" })}>
       <div
-        class="w-[calc(100vw-2*28px)] h-[calc(100vh-218px)] grid grid-cols-3 grid-flow-col gap-4"
+        class="md:w-[calc(100vw-2*28px)] md:h-[calc(100vh-218px)] md:grid md:grid-cols-3 md:grid-flow-col md:gap-4"
       >
         <slot />
       </div>
