--- a/src/components/MainNewsCard.astro
+++ b/src/components/MainNewsCard.astro
@@ -9,7 +9,9 @@ interface Props {
 const { title, description, image, url } = Astro.props;
 ---
 
-<div class="col-span-2 flex items-center justify-center">
+<div
+  class="md:col-span-2 md:flex md:items-center md:justify-center md:pb-0 pb-5"
+>
   <div class="inline-block text-center group">
     <a href={url} class="block mx-auto">
       <div class="overflow-hidden rounded-lg">
