--- a/src/components/navigation_ui/Navbar.astro
+++ b/src/components/navigation_ui/Navbar.astro
@@ -8,14 +8,17 @@ interface Props {
 const navLinks = siteConfig.navLinks || [];
 ---
 
-<header id="header" class="flex">
+<header
+  id="header"
+  class="flex flex-col md:flex-row items-start md:items-center"
+>
   <nav
-    class="flex flex-wrap gap-x-6 pt-8 w-[25vw] border-b-2 border-gray-200 mb-10"
+    class="flex flex-wrap gap-x-4 md:gap-x-6 w-full md:w-[25vw] border-b-2 border-gray-200 mb-6 md:mb-10 pt-4 md:pt-8"
   >
     {
       navLinks.map((link) => (
         <a
-          class={`text-xl pb-1 border-b-2 ${
+          class={`text-lg md:text-xl pb-1 border-b-2 ${
             link.text === Astro.props.currentTab
               ? "border-opacity-100 border-black"
               : "border-opacity-0 border-black hover:border-opacity-100"
