--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const [mainNews, ...remainingposts] = allPosts;
         title={mainNews.data.title}
         description={mainNews.data.description}
         image={mainNews.data.image}
-        url={`/${mainNews.collection}/${mainNews.slug}/`}
+        url={`${mainNews.collection}/${mainNews.slug}/`}
       />
     )
   }
