--- a/src/components/navigation_ui/Ui.astro
+++ b/src/components/navigation_ui/Ui.astro
@@ -1,8 +1,9 @@
 ---
 import ToggleTheme from "./ToggleTheme.astro";
+import siteConfig from "../../site-config";
 ---
 
-<a href="/" class="inline-flex items-center">
+<a href={siteConfig.base} class="inline-flex items-center">
   <img src="../../public/faveicon.png" class="mr-2 w-20 rounded-full" />
   <h1 class="font-bold text-4xl">Folkets rop</h1>
 </a>
