--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -13,7 +13,7 @@ const { ...head } = Astro.props;
     <BaseHead {...head} />
     <ViewTransitions />
   </head>
-  <body class="sm:px-96">
+  <body class="sm:px-96 md:px-14">
     <div class="flex mt-5">
       <a href="/" class="inline-flex items-center">
         <img src="../../public/faveicon.png" class="mr-2 w-20 rounded-full" />
