--- a/src/pages/Klasse/index.astro
+++ b/src/pages/Klasse/index.astro
@@ -19,7 +19,7 @@ const [mainNews, ...remainingposts] = classePosts;
       <MainNewsCard
         title={mainNews.data.title}
         description={mainNews.data.description}
-        image={"../" + mainNews.data.image}
+        image={mainNews.data.image}
         url={`/${mainNews.collection}/${mainNews.slug}/`}
       />
     )
