--- a/src/components/MainNewsCard.astro
+++ b/src/components/MainNewsCard.astro
@@ -17,7 +17,7 @@ const { title, description, image, url } = Astro.props;
       <div class="overflow-hidden rounded-lg">
         <img
           class="block max-h-[65vh] rounded-lg transform transition-transform duration-300 group-hover:scale-110"
-          src={image}
+          src={"../" + image}
         />
       </div>
       <h2 class="text-3xl font-semibold overflow-hidden text-ellipsis">
