--- a/src/components/navigation_ui/Ui.astro
+++ b/src/components/navigation_ui/Ui.astro
@@ -3,7 +3,7 @@ import ToggleTheme from "./ToggleTheme.astro";
 ---
 
 <a href="/" class="inline-flex items-center">
-  <img src="faveicon.png" class="mr-2 w-20 rounded-full" />
+  <img src="../faveicon.png" class="mr-2 w-20 rounded-full" />
   <h1 class="font-bold text-4xl">Folkets rop</h1>
 </a>
 {/*<ToggleTheme />*/}
