change images to webp format

--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -16,7 +16,7 @@ const { ...head } = Astro.props;
   <body class="sm:px-96 md:px-14">
     <div class="flex mt-5">
       <a href="/" class="inline-flex items-center">
-        <img src={"../../" + "faveicon.png"} class="mr-2 w-20 rounded-full" />
+        <img src={"../../" + "faveicon.webp"} class="mr-2 w-20 rounded-full" />
         <h1 class="font-bold text-4xl">Folkets rop</h1>
       </a>
     </div>
