--- a/src/components/navigation_ui/Navbar.astro
+++ b/src/components/navigation_ui/Navbar.astro
@@ -12,22 +12,24 @@ const navLinks = siteConfig.navLinks || [];
   id="header"
   class="flex flex-col md:flex-row items-start md:items-center"
 >
-  <nav
-    class="flex flex-wrap gap-x-4 md:gap-x-6 w-full md:w-[25vw] border-b-2 border-gray-200 mb-6 md:mb-10 pt-4 md:pt-8"
-  >
-    {
-      navLinks.map((link) => (
-        <a
-          class={`text-lg md:text-xl pb-1 border-b-2 ${
-            link.text === Astro.props.currentTab
-              ? "border-opacity-100 border-black"
-              : "border-opacity-0 border-black hover:border-opacity-100"
-          } transition-colors duration-150 ease-linear`}
-          href={link.href}
-        >
-          {link.text}
-        </a>
-      ))
-    }
+  <nav class="w-full md:w-[50vw]">
+    <div
+      class="flex flex-wrap gap-x-4 md:gap-x-6 w-full md:w-[80%] border-b-2 border-gray-200 mb-6 md:mb-10 pt-4 md:pt-8"
+    >
+      {
+        navLinks.map((link) => (
+          <a
+            class={`text-lg md:text-xl pb-1 border-b-2 ${
+              link.text === Astro.props.currentTab
+                ? "border-opacity-100 border-black"
+                : "border-opacity-0 border-black hover:border-opacity-100"
+            } transition-colors duration-150 ease-linear`}
+            href={link.href}
+          >
+            {link.text}
+          </a>
+        ))
+      }
+    </div>
   </nav>
 </header>
