--- a/src/pages/Klasse/[...slug].astro
+++ b/src/pages/Klasse/[...slug].astro
@@ -12,7 +12,6 @@ export async function getStaticPaths() {
 
 const { slug } = Astro.params;
 const klasseposts = await getCollection("Klasse");
-
 const post = klasseposts.find((post) => post.slug === slug);
 ---
 
@@ -32,9 +31,7 @@ const post = klasseposts.find((post) => post.slug === slug);
             <h1 class="text-4xl font-bold text-gray-800 text-center">
               {post.data.title}
             </h1>
-            <p class="text-sm text-gray-500 mt-2 text-center">
-              {post.data.date}
-            </p>
+            <p class="text-sm text-gray-500 mt-2">{post.data.date}</p>
           </header>
           <div class="prose prose-lg text-gray-700 leading-relaxed">
             {post.body}
