--- a/src/components/MainNewsCard.astro
+++ b/src/components/MainNewsCard.astro
@@ -12,20 +12,23 @@ const { title, description, image, url } = Astro.props;
 <div
   class="md:col-span-2 md:flex md:items-center md:justify-center md:pb-0 pb-5"
 >
-  <div class="inline-block text-center group">
+  <div class="inline-block text-center group static">
     <a href={url} class="block mx-auto">
-      <div class="overflow-hidden rounded-lg">
+      <div class="relative overflow-hidden rounded-lg">
         <img
           class="block max-h-[65vh] rounded-lg transform transition-transform duration-300 group-hover:scale-110"
           src={"../" + image}
         />
+        <div
+          class="absolute bottom-0 bg-black bg-opacity-40 rounded-lg w-full max-h-[30%] text-white text-center px-2 py-4"
+        >
+          <h2
+            class="md:text-3xl text-lg font-semibold overflow-hidden text-ellipsis whitespace-nowrap"
+          >
+            {title}
+          </h2>
+        </div>
       </div>
-      <h2 class="text-3xl font-semibold overflow-hidden text-ellipsis">
-        {title}
-      </h2>
-      <p class="text-xl text-gray-600 overflow-hidden text-ellipsis">
-        {description}
-      </p>
     </a>
   </div>
 </div>
