--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,25 +4,13 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import MainNewsCard from "../components/MainNewsCard.astro";
 import NewsList from "../components/NewsList.astro";
 
-const politikkPosts = await getCollection("Politikk");
-const kulturPosts = await getCollection("Kultur");
-const foreignAffairsPosts = await getCollection("Utenriks");
-const meningPosts = await getCollection("Mening");
-const naringslivPosts = await getCollection("Naringsliv");
+const artikkelsPosts = await getCollection("artikkels");
 
-const allPosts = [
-  ...politikkPosts.map((post) => ({ ...post, collection: "Politikk" })),
-  ...kulturPosts.map((post) => ({ ...post, collection: "Kultur" })),
-  ...foreignAffairsPosts.map((post) => ({ ...post, collection: "Utenriks" })),
-  ...meningPosts.map((post) => ({ ...post, collection: "Mening" })),
-  ...naringslivPosts.map((post) => ({ ...post, collection: "Naringsliv" })),
-];
-
-allPosts.sort(
+artikkelsPosts.sort(
   (a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime(),
 );
 
-const [mainNews, ...remainingposts] = allPosts;
+const [mainNews, ...remainingposts] = artikkelsPosts;
 ---
 
 <BaseLayout currentTab="Alt">
@@ -32,7 +20,7 @@ const [mainNews, ...remainingposts] = allPosts;
         title={mainNews.data.title}
         description={mainNews.data.description}
         image={mainNews.data.image}
-        url={`${mainNews.collection}/${mainNews.slug}/`}
+        url={`${mainNews.data.main_tag}/${mainNews.slug}/`}
       />
     )
   }
